# mm-bot

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.web  Dockerfile.worker  Procfile  RAILWAY.md  RAILWAY_WEB.md  README.md  docker-compose.orchestrator.yml
apps/web/: .env.example  README.md  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/runs/[id]/: page.tsx
apps/web/components/: CandlestickChart.tsx  LineChart.tsx  TradeOverlayChart.tsx
apps/web/lib/: api.ts  types.ts
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/bybit/: Cargo.toml
crates/bybit/src/: rest.rs  ws.rs
crates/core/src/: types.rs
crates/engine/: Cargo.toml
crates/engine/src/: driver.rs  event.rs  feed.rs  lib.rs  main.rs  sink.rs  tick.rs
crates/execution/: Cargo.toml
crates/execution/src/: sim.rs
crates/mm/: Cargo.toml
crates/mm/src/: grid.rs  lib.rs  rebalance.rs
crates/orchestrator-core/: Cargo.toml
crates/orchestrator-core/src/: models.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs  mm_policy.rs  trend_policy.rs
crates/state_machine/: Cargo.toml
crates/state_machine/src/: cause.rs  lib.rs  state.rs  tests.rs  transition.rs  trend_cause.rs  trend_state.rs  trend_tests.rs  trend_transition.rs
crates/structure/: Cargo.toml
crates/structure/src/: atr.rs  bos.rs  candle.rs  lib.rs  pivot.rs  pullback.rs  structure.rs
crates/telegram/: Cargo.toml
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
data/: eth_5m.csv
migrations/: 0001_init.sql
