[package]
name = "bybit"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
core = { path = "../core" }
structure = { path = "../structure" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
