[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path = "../core" }
state_machine = { path = "../state_machine" }
structure = { path = "../structure" }
mm = { path = "../mm" }
policy = { path = "../policy" }
bybit = { path = "../bybit" }
execution = { path = "../execution" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
csv = "1"
serde = { version = "1", features = ["derive"] }
